# server

./: .gitmodules  CMakeLists.txt  _httpd.c  httpd.c  httpd.h  main.c
trash/: httpd.c  server.c
